--- a/place_holder.html
+++ b/place_holder.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../css/style.css?v=1.0.0" />
-  <link rel="stylesheet" href="../css/style-button.css?v=1.0.0" />
   <title data-emoji="pet"></title>
   <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #f5f5f5;
+      font-family: Arial, sans-serif;
+    }
+
     h1 {
       font-size: 2rem;
       color: #555;
