--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -3,120 +3,135 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🍽️</title>
+  <title data-emoji="restaurant"></title>
   <link rel="stylesheet" href="../css/style.css?v=1.0.0" />
   <link rel="stylesheet" href="../css/style-button.css?v=1.0.0" />
 </head>
 <script src="../js/cloud.js?v=1.0.0"></script>
 <script src="../js/util.js?v=1.0.0"></script>
 <body>
-  <datalist id="restaurantList">
-    <!-- Options will be populated here by JS -->
-  </datalist>
-
   <button class="topleftbutton" onclick="window.location.href='../index.html'">🏠</button>
-  <br />
+  <button class="toprightbutton" id="helpButton" data-emoji="help"></button>
+  </div>
+    <div class="modal" id="helpModal">
+    <div class="modal-content">
+      <h3 data-i18n="help"></h3>
+      <pre id="helpText" class="help-text"></pre>
+      <button class="cancel-btn" onclick="closeHelpModal()" data-emoji="cancel"></button>
+    </div>
+  </div>
 
   <div class="button-container">
     <button class="big-btn" onclick="openAddModal()">
-      <div class="emoji">➕</div>
+      <div class="emoji" data-emoji="add"></div>
     </button>
-
     <button class="big-btn" onclick="window.location.href = 'history.html'">
-      <div class="emoji">📜</div>
+      <div class="emoji" data-emoji="history"></div>
     </button>
-
     <button class="big-btn" onclick="window.location.href = 'summary.html'">
-      <div class="emoji">📊</div>
+      <div class="emoji" data-emoji="summary"></div>
     </button>
-
     <button class="big-btn" onclick="window.location.href = 'pizza.html'">
-      <div class="emoji">🍕</div>
+      <div class="emoji" data-emoji="pizza"></div>
     </button>
   </div>
 
-  <div
-    id="addModal"
-    style="
-      display: none;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 90vw;
-      max-width: 500px;
-      max-height: 90vh;
-      overflow-y: auto;
-      background: #fff;
-      padding: 40px;
-      border: 1px solid #ccc;
-      box-shadow: 0 2px 15px rgba(0, 0, 0, 0.4);
-      border-radius: 12px;
-      z-index: 1000;
-    "
-  >
-    <h3 data-i18n="addrestaurant"></h3>
+  <datalist id="restaurantList">
+    <!-- Options will be populated here by JS -->
+  </datalist>
+  <div class="modal" id="addModal">
+    <div class="modal-content" id="addModalContent">
+      <h3 data-i18n="addrestaurant"></h3>
+      <label for="addRestaurant" data-i18n="name"></label>
+      <input type="text" id="addRestaurant" list="restaurantList" autocomplete="on" />
+      <br /><br />
+      <label for="addExtraInfoBox">
+        <input
+          type="checkbox"
+          id="addExtraInfoBox"
+          onchange="toggleAddDateTimeInputs()"
+        />
+        <span data-i18n="addmoredetail"></span>
+      </label>
+      <br /><br />
 
-    <label for="addRestaurant" data-i18n="name"></label>
-    <input type="text" id="addRestaurant" list="restaurantList" autocomplete="on" />
-    <br /><br />
+      <div id="addExtraInfoContainer" style="display: none; flex-direction: column;">
+        <div class="form-row">
+          <label for="addCustomDateInput" data-i18n="date"></label>
+          <input type="date" id="addCustomDateInput" />
+        </div>
 
-    <label for="addShowDateCheckbox">
-      <input
-        type="checkbox"
-        id="addShowDateCheckbox"
-        onchange="toggleAddDateTimeInputs()"
-      />
-      <span data-i18n="addmoredetail">Add more detail</span>
-    </label>
-    <br /><br />
+        <div class="form-row">
+          <label for="addTimeSelect" data-i18n="time"></label>
+          <select id="addTimeSelect">
+            <option value="-" selected>-</option>
+            <option value="Breakfast" data-i18n="breakfast">Breakfast</option>
+            <option value="Lunch" data-i18n="lunch">Lunch</option>
+            <option value="Dinner" data-i18n="dinner">Dinner</option>
+            <option value="Dessert" data-i18n="dessert">Dessert</option>
+          </select>
+        </div>
 
-    <div id="addDateTimeContainer" style="display: none;">
-      <label for="addCustomDateInput" style="padding-right: 8px;" data-i18n="date"></label>
-      <input type="date" id="addCustomDateInput" />
-      <br />
+        <div class="form-row">
+          <label for="addScoreSelect" data-i18n="score"></label>
+          <select id="addScoreSelect">
+            <option value="-" selected>-</option>
+            <option value="👎">👎</option>
+            <option value="👌">👌</option>
+            <option value="👍">👍</option>
+            <option value="⭐">⭐</option>
+          </select>
+        </div>
 
-      <label for="addTimeSelect" style="padding-right: 8px;" data-i18n="time"></label>
-      <select id="addTimeSelect">
-        <option value="-" selected>-</option>
-        <option value="Breakfast" data-i18n="breakfast">Breakfast</option>
-        <option value="Lunch" data-i18n="lunch">Lunch</option>
-        <option value="Dinner" data-i18n="dinner">Dinner</option>
-        <option value="Dessert" data-i18n="dessert">Dessert</option>
-      </select>
-      <br />
+        <div class="form-row"> 
+          <label for="addTypeSelect" data-i18n="type"></label>
+          <select id="addTypeSelect" required>
+            <option value="-" selected>-</option>
+            <option value="Delivery" data-i18n="delivery">Delivery</option>
+            <option value="DineIn" data-i18n="dinein">DineIn</option>
+            <option value="Cook" data-i18n="cook">Cook</option>
+            <option value="Leftover" data-i18n="leftover">Leftover</option>
+          </select>
+        </div>
 
-      <label for="addScoreSelect" style="padding-right: 8px;" data-i18n="score"></label>
-      <select id="addScoreSelect">
-        <option value="-" selected>-</option>
-        <option value="👎">👎</option>
-        <option value="👌">👌</option>
-        <option value="👍">👍</option>
-        <option value="⭐">⭐</option>
-      </select>
-      <br />
-
-      <label for="addTypeSelect" style="padding-right: 8px;" data-i18n="type"></label>
-      <select id="addTypeSelect" required>
-        <option value="-" selected>-</option>
-        <option value="Delivery" data-i18n="delivery">Delivery</option>
-        <option value="DineIn" data-i18n="dinein">DineIn</option>
-        <option value="Cook" data-i18n="cook">Cook</option>
-        <option value="Leftover" data-i18n="leftover">Leftover</option>
-      </select>
-      <br />
-
-      <label for="addNote" data-i18n="note"></label>
-      <br />
-      <textarea id="addNote" rows="3" data-i18n-placeholder="optionalnote"></textarea>
+        <div class="form-row"> 
+          <label for="addNote" data-i18n="note"></label>
+          <textarea class="styled-textarea" id="addNote" rows="3" data-i18n-placeholder="optionalnote"></textarea>
+        </div>
+      </div>
+      <button onclick="submitAdd()" data-emoji="save"></button>
+      <button class="cancel-btn" onclick="closeAddModal()" data-emoji="cancel"></button>
     </div>
-    <br />
-
-    <button onclick="submitAdd()" data-i18n="add"></button>
-    <button onclick="closeAddModal()" data-i18n="cancel"></button>
   </div>
 
   <script>
+    // help text related
+    const helpButton = document.getElementById('helpButton');
+    const helpModal = document.getElementById('helpModal');
+    const helpText = document.getElementById('helpText');
+    helpButton.addEventListener('click', () => {
+      const lang = localStorage.getItem('lang') || 'en';
+      const translations = JSON.parse(localStorage.getItem('translations')) || {};
+      if (translations[lang] && translations[lang]['helptext-restaurant']) {
+          helpText.innerHTML  = translations[lang]['helptext-restaurant'];
+      }
+      helpModal.style.display = 'flex';
+    });
+    function closeHelpModal() {
+      helpModal.style.display = 'none';
+    }
+
+    // fix mobile vertical viewport issue
+    function setVh() {
+      let vh = window.innerHeight * 0.01;
+      document.documentElement.style.setProperty('--vh', `${vh}px`);
+    }
+    setVh();
+    window.addEventListener('resize', setVh);
+    window.addEventListener('orientationchange', setVh);
+
+
+    // unorganized
     let visitData = []; // Store all visits in memory
     const STORAGE_KEY = "RestaurantVisits";
     let nextId = 0;
@@ -138,14 +153,14 @@
     // add
     function openAddModal() {
       document.getElementById("addRestaurant").value = "";
-      document.getElementById("addShowDateCheckbox").checked = false;
+      document.getElementById("addExtraInfoBox").checked = false;
       toggleAddDateTimeInputs();
       document.getElementById("addCustomDateInput").value = "";
       document.getElementById("addTimeSelect").value = "-";
       document.getElementById("addScoreSelect").value = "-";
       document.getElementById("addTypeSelect").value = "-";
       document.getElementById("addNote").value = "";
-      document.getElementById("addModal").style.display = "block";
+      document.getElementById("addModal").style.display = "flex";
     }
 
     function closeAddModal() {
@@ -153,8 +168,8 @@
     }
 
     function toggleAddDateTimeInputs() {
-      const isChecked = document.getElementById("addShowDateCheckbox").checked;
-      document.getElementById("addDateTimeContainer").style.display = isChecked ? "block" : "none";
+      const isChecked = document.getElementById("addExtraInfoBox").checked;
+      document.getElementById("addExtraInfoContainer").style.display = isChecked ? "flex" : "none";
     }
 
     function submitAdd() {
@@ -165,7 +180,7 @@
       }
 
       let date;
-      if (document.getElementById("addShowDateCheckbox").checked) {
+      if (document.getElementById("addExtraInfoBox").checked) {
         date = document.getElementById("addCustomDateInput").value;
         if (!date) {
           date = new Date().toLocaleDateString("en-CA").split("T")[0]; // today's date
@@ -204,18 +219,6 @@
         datalist.appendChild(option);
       });
     }
-
-    function setVh() {
-      let vh = window.innerHeight * 0.01;
-      document.documentElement.style.setProperty("--vh", `${vh}px`);
-    }
-
-    // Initial set
-    setVh();
-
-    // Update on resize/orientation change
-    window.addEventListener("resize", setVh);
-    window.addEventListener("orientationchange", setVh);
   </script>
 </body>
 </html>
