--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
   <script src="js/cloud.js?v=1.0.0"></script>
   <script src="js/util.js?v=1.0.0"></script>
+  <script src="js/modal.js?v=1.0.0"></script>
   <script>
     // cloud token related
     const tokenKey = 'google_token';
