--- a/restaurant/history.html
+++ b/restaurant/history.html
@@ -101,6 +101,9 @@
       populateFilterColumns(state);
       buildTableHeaders(state);
       updateSortIndicators(state);
+      if (localStorage['history_range']){
+        document.getElementById("historyRange").value = localStorage['history_range'];
+      }
       await loadHistoryData(state);
       enableButtons();
     });
